--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,20 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0-alpha1'
+    implementation 'androidx.annotation:annotation:1.0.2'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    //firebase Auth
+    implementation 'com.google.firebase:firebase-auth:16.0.1'
+    //firebase Storage
+    implementation 'com.google.firebase:firebase-storage:16.0.1'
+    //firebase Database
+    implementation 'com.google.firebase:firebase-database:16.0.1'
+    //glide Library
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 }
+apply plugin: 'com.google.gms.google-services'
