Add Docs Layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,11 @@
         android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.RegisterActivity" />
-        <activity android:name=".Activities.ResetPasswordActivity" />
-        <activity android:name=".Activities.LoginActivity" />
-        <activity android:name=".Activities.Experiences" />
+        <activity android:name=".Activities.DocsActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name=".Activities.RegisterActivity"  android:screenOrientation="portrait"/>
+        <activity android:name=".Activities.ResetPasswordActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".Activities.LoginActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".Activities.Experiences" android:screenOrientation="portrait"/>
         <activity
             android:name=".Activities.Profile"
             android:screenOrientation="portrait" />
