--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.CheckListProfileActivity"></activity>
+        <activity android:name=".Activities.PaisesECulturasActivity"></activity>
+        <activity android:name=".Activities.VideosActivity" />
+        <activity android:name=".Activities.CheckListProfileActivity" />
         <activity android:name=".Activities.RequirementsCheckListActivity" />
         <activity android:name=".Activities.DocsCheckListActivity" />
         <activity
