Added Forum on Profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.CityDetailActivity"></activity>
+        <activity android:name=".Activities.ForumActivity"></activity>
+        <activity android:name=".Activities.ForumDetailActivity" />
+        <activity android:name=".Activities.CityDetailActivity" />
         <activity android:name=".Activities.PaisesECulturasActivity" />
         <activity android:name=".Activities.VideosActivity" />
         <activity android:name=".Activities.CheckListProfileActivity" />
