--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,6 @@ dependencies {
     //TO GMAIL
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'me.biubiubiu.justifytext:library:1.1'
 }
 apply plugin: 'com.google.gms.google-services'
